# cs487

./: README.md
GameJam_1/: .clang-format  .gitignore  CMakeLists.txt  gamelib.sln
GameJam_1/assets/: world.txt
GameJam_1/gamelib/: CMakeLists.txt  gamelib.hpp  gamelib.vcxproj  gamelib.vcxproj.filters  gamelib_action.cpp  gamelib_action.hpp  gamelib_actor.cpp  gamelib_actor.hpp  gamelib_audio.cpp  gamelib_base.hpp  gamelib_command.hpp  gamelib_component.cpp  gamelib_component.hpp  gamelib_context.cpp  gamelib_context.hpp  gamelib_graphics.cpp  gamelib_graphics.hpp  gamelib_input_handler.cpp  gamelib_object.cpp  gamelib_object.hpp  gamelib_random.hpp  gamelib_world.cpp  gamelib_world.hpp  hatchetfish_log.hpp  hatchetfish_stopwatch.cpp  hatchetfish_stopwatch.hpp  pch.h
GameJam_1/simplegame/: CMakeLists.txt  main.cpp  simplegame.vcxproj  simplegame.vcxproj.filters
GameJam_2/: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  cs487687.vcxproj  gamelib.sln
GameJam_2/assets/: GingerRun.pyxel  GingerRun.txt  LibXORColors32x32.pyxel  distoro2.mid  world.txt  world0.txt
GameJam_2/gamelib/: CMakeLists.txt  gamelib.cpp  gamelib.hpp  gamelib.vcxproj  gamelib.vcxproj.filters  gamelib_actor.cpp  gamelib_actor.hpp  gamelib_actor_component.cpp  gamelib_actor_component.hpp  gamelib_audio.hpp  gamelib_base.hpp  gamelib_command.cpp  gamelib_command.hpp  gamelib_context.cpp  gamelib_context.hpp  gamelib_font.cpp  gamelib_font.hpp  gamelib_graphics.cpp  gamelib_graphics.hpp  gamelib_graphics_component.cpp  gamelib_graphics_component.hpp  gamelib_input_component.cpp  gamelib_input_component.hpp  gamelib_input_handler.cpp  gamelib_input_handler.hpp  gamelib_locator.cpp  gamelib_locator.hpp  gamelib_object.cpp  gamelib_object.hpp  gamelib_physics_component.cpp  gamelib_physics_component.hpp  gamelib_random.cpp  gamelib_random.hpp  gamelib_story_screen.cpp  gamelib_story_screen.hpp  gamelib_world.cpp  gamelib_world.hpp  hatchetfish_log.cpp  hatchetfish_stopwatch.cpp  hatchetfish_stopwatch.hpp
GameJam_2/gingerrun/: AlienActorComponent.cpp  AlienActorComponent.hpp  AlienInputComponent.cpp  AlienInputComponent.hpp  CollisionPhysicsComponent.cpp  CollisionPhysicsComponent.hpp  ColumnActorComponent.cpp  ColumnActorComponent.hpp  ColumnGraphicsComponent.cpp  ColumnGraphicsComponent.hpp  GingerbreadInputComponent.cpp  GingerbreadInputComponent.hpp  gingerrun.cpp  gingerrun.vcxproj  gingerrun.vcxproj.filters
GameJam_2/simplegame/: CMakeLists.txt  Commands.hpp  DungeonActorComponent.cpp  DungeonActorComponent.hpp  FlyPhysicsComponent.cpp  FlyPhysicsComponent.hpp  Game.cpp  Game.hpp  NewtonPhysicsComponent.cpp  NewtonPhysicsComponent.hpp  RunInputComponent.cpp  RunInputComponent.hpp  colors.csv  main.cpp  simplegame.vcxproj  simplegame.vcxproj.filters
